--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,19 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web site for testing purposes."
     />
+    <meta property="og:url" content="%PUBLIC_URL%/logo512.png" />
+    <meta property="og:image:alt" content="A site for testing purposes!">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="600">
+    <meta property="og:site_name" content="BrianTestSite">
+    <meta property="og:type" content="object" />
+    <meta property="og:title" content="The Lavender Witch Site!" />
+    <meta property="og:description" content="A site for testing purposes!" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo512.png" />
+    <meta name="expected-hostname" content="https://melosaiyan.github.io/">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +35,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Brian's Test Site</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
